dist/tests/utils/errors/errorCodeToHexString.d.ts
export default function errorCodeToHexString(errorCode: number): string;
//# sourceMappingURL=errorCodeToHexString.d.ts.map